# mwc-qt-wallet

./: .gitignore  CMakeLists.txt  build_version.h  docgen.sh  features.h  gen_vs_sln.bat  gui-wallet.pro  main.cpp  mw-logo.icns  mwc-qt-mobile-activity.pro  mwc-qt-mobile-service.pro  mwc-qt-mobile.pro  mwc-qt-wallet.pro  mwc-wallet-desktop.pro  qtandroidservice.cpp  qtandroidservice.h  resources.qrc  resources_desktop.qrc  resources_mobile.qrc  service_main.cpp
DOC/: BUILDING_LINUX.md  BUILDING_MAC.md  BUILD_WINDOWS.md  Installation.md  README.md  bridge_change_history.md  claiming.md  cold_wallet.md  cold_wallet_persistent_usb_drive_creation.md  cold_wallet_software_installation_guide.md  cold_wallet_usage.md  create_cold_wallet_persistent_usb_drive.md  deposit_and_withdrawal_tradeogre.md  hodl_claims.md  hotbit_withdrawal.md  mwc_txn_fees.md  notifications.md  project_structure.md  qt_1_0_12_known_issues.md  status_windows.md
DOC_QA/: testing_scenario.md
android/: AndroidManifest.xml  build.gradle  gradlew.bat
bridge/: BridgeManager.cpp  BridgeManager.h  clipboard_b.cpp  clipboard_b.h  config_b.cpp  config_b.h  corewindow_b.cpp  corewindow_b.h  heartbeat_b.cpp  heartbeat_b.h  hodlstatus_b.cpp  hodlstatus_b.h  node_b.cpp  node_b.h  notification_b.cpp  notification_b.h  statemachine_b.cpp  statemachine_b.h  swap_b.cpp  swap_b.h  swapmkt_b.cpp  swapmkt_b.h  util_b.cpp  util_b.h  wallet_b.cpp  wallet_b.h
control/: MwcCheckedFrame.cpp  MwcCheckedFrame.h  MwcComboBox.cpp  MwcComboBox.h  MwcFrameWithBorder.cpp  MwcFrameWithBorder.h  MwcLabel.cpp  MwcLabel.h  MwcLabelProgress.cpp  MwcLabelProgress.h  MwcLineEdit.cpp  MwcLineEdit.h  MwcLineEditDlg.cpp  MwcMainWndContainer.cpp  MwcMainWndContainer.h  MwcPlainEditLogs.cpp  MwcPlainEditLogs.h  MwcPushButton.cpp  MwcPushButton.h  NavControls.cpp  NavControls.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  listwithcolumns.cpp  listwithcolumns.h  messagebox.cpp  messagebox.h  messagebox.ui  mwcdialog.cpp  mwcdialog.h
control_desktop/: MwcCheckBox.cpp  MwcCheckBox.h  MwcComboBox.cpp  MwcComboBox.h  MwcFrameWithBorder.h  MwcGroupBox.cpp  MwcGroupBox.h  MwcHeaderView.cpp  MwcHeaderView.h  MwcLabel.cpp  MwcLabel.h  MwcLabelProgress.cpp  MwcLabelProgress.h  MwcLineEdit.cpp  MwcLineEdit.h  MwcLineEditDlg.cpp  MwcLineEditDlg.h  MwcListView.cpp  MwcListView.h  MwcMenu.cpp  MwcMenu.h  MwcMenuBar.cpp  MwcMenuBar.h  MwcPlainEditLogs.cpp  MwcPlainEditLogs.h  MwcPlainTextEdit.cpp  MwcPlainTextEdit.h  MwcProgressBar.cpp  MwcProgressBar.h  MwcPushButton.cpp  MwcPushButton.h  MwcRadioButton.cpp  MwcRadioButton.h  MwcScrollBar.cpp  MwcScrollBar.h  MwcStatusBar.cpp  MwcStatusBar.h  MwcStatusLine.cpp  MwcStatusLine.h  MwcTabBar.cpp  (+30 more)
core/: Config.cpp  Config.h  HodlStatus.cpp  HodlStatus.h  MessageMapper.cpp  MessageMapper.h  Notification.cpp  Notification.h  TimerThread.cpp  TimerThread.h  WalletApp.cpp  WalletApp.h  WndManager.cpp  WndManager.h  appcontext.cpp  appcontext.h  global.cpp  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mwcexception.cpp  mwcexception.h  mwctoolbar.cpp  mwctoolbar.h  mwctoolbar.ui  navbar.cpp  navbar.h  navbar.ui  navmenu.cpp  navmenu.h  navmenuaccount.cpp  navmenuaccount.h  navmenuaccount.ui  navmenuconfig.cpp  navmenuconfig.h  navmenuconfig.ui  navmenuconfigcoldwlt.ui  navmenuconfignode.ui  navmenuconfigwallet.ui  (+17 more)
core_desktop/: DesktopWndManager.cpp  DesktopWndManager.h  PanelBaseWnd.cpp  PanelBaseWnd.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mwctoolbar.cpp  mwctoolbar.h  mwctoolbar.ui  navbar.cpp  navbar.h  navbar.ui  navmenu.cpp  navmenu.h  navmenuaccount.cpp  navmenuaccount.h  navmenuaccount.ui  navmenuconfig.cpp  navmenuconfig.h  navmenuconfigcoldwlt.ui  navmenuconfignode.ui  navmenuconfigwallet.ui  navwnd.cpp  navwnd.h  paneltitle.cpp  paneltitle.h  paneltitle.ui  statuswnd.cpp  statuswnd.h  statuswnd.ui  statuswndmgr.cpp  statuswndmgr.h  windowmanager.cpp  windowmanager.h
core_mobile/: MobileWndManager.cpp  MobileWndManager.h  androidinterface.cpp  androidinterface.h  qtandroidservice.cpp  qtandroidservice.h
data/: passwordanalyser.cpp  passwordanalyser.h  stringutils.cpp  stringutils.h  walletdata.cpp  walletdata.h
dialogs/: c_addbip39word.h  c_addbip39word.ui  e_httplistenerconfigdlg.cpp  e_httplistenerconfigdlg.ui  e_showoutputdlg.cpp  e_showoutputdlg.h  e_showoutputdlg.ui  e_showproofdlg.h  e_showproofdlg.ui  e_showtransactiondlg.cpp  e_showtransactiondlg.h  e_showtransactiondlg.ui  fileslateinfodlg.cpp  fileslateinfodlg.h  fileslateinfodlg.ui  g_sendconfirmationdlg.cpp  g_sendconfirmationdlg.h  g_sendconfirmationdlg.ui  h_hodlclaimwallet.ui  h_hodlgetsignature.cpp  h_hodlgetsignature.h  h_hodlgetsignature.ui  helpdlg.cpp  helpdlg.h  helpdlg.ui  networkselectiondlg.cpp  networkselectiondlg.h  networkselectiondlg.ui  selectmodedlg.cpp  selectmodedlg.h  selectmodedlg.ui  sendcoinsparamsdialog.cpp  sendcoinsparamsdialog.h  sendcoinsparamsdialog.ui  shownotificationdlg.cpp  shownotificationdlg.h  shownotificationdlg.ui  showproofdlg.cpp  showproofdlg.h  showproofdlg.ui  (+19 more)
dialogs_desktop/: c_addbip39word.cpp  c_addbip39word.h  c_addbip39word.ui  e_httplistenerconfigdlg.cpp  e_httplistenerconfigdlg.h  e_httplistenerconfigdlg.ui  e_httplistenersimpleconfigdlg.cpp  e_httplistenersimpleconfigdlg.h  e_httplistenersimpleconfigdlg.ui  e_showoutputdlg.cpp  e_showoutputdlg.h  e_showoutputdlg.ui  e_showproofdlg.cpp  e_showproofdlg.h  e_showproofdlg.ui  e_showtransactiondlg.cpp  e_showtransactiondlg.h  e_showtransactiondlg.ui  g_decodeslatepackdlg.cpp  g_decodeslatepackdlg.h  g_decodeslatepackdlg.ui  g_finalizeconfirmationdlg.cpp  g_finalizeconfirmationdlg.h  g_finalizeconfirmationdlg.ui  g_inputslatepackdlg.cpp  g_inputslatepackdlg.h  g_inputslatepackdlg.ui  g_sendconfirmationdlg.cpp  g_sendconfirmationdlg.h  g_sendconfirmationdlg.ui  g_sendconfirmationspdlg.cpp  g_sendconfirmationspdlg.h  g_sendconfirmationspdlg.ui  h_hodlclaimwallet.cpp  h_hodlclaimwallet.h  h_hodlclaimwallet.ui  h_hodlgetsignature.cpp  h_hodlgetsignature.h  h_hodlgetsignature.ui  helpdlg.cpp  (+45 more)
help/: Airdrop.html  Default.html  (+28 more)
(+942 files in other folders)
